[package]
name = "heimdall-cli"
version = "0.2.0"
edition = "2024"
description = "A simple hotkey daemon. Primarily tested on MacOS"
homepage = "https://github.com/uzaaft/heimdall"
documentation = "https://github.com/uzaaft/heimdall"
repository = "https://github.com/uzaaft/heimdall"
license = "MIT"

[[bin]]
name = "heim"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Windowing
winit = { version = "0.30", default-features = false }
global-hotkey = { version = "0.7" }
serde = { version = "1" }
# Toml reading
toml = { version = "0.8", default-features = false, features = ["parse"] }
# Logging
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
  "env-filter",
] }
# File locking
# TODO: Remove this once https://github.com/rust-lang/rust/issues/130994 is implemented
fs4 = { version = "0.13", features = ["sync"], default-features = false }
