[package]
name = "heimdall-cli"
version = "0.3.1"
edition = "2024"
description = "A simple hotkey daemon. Primarily tested on MacOS"
homepage = "https://github.com/uzaaft/heimdall"
documentation = "https://github.com/uzaaft/heimdall"
repository = "https://github.com/uzaaft/heimdall"
license = "MIT"
rust-version = "1.89"

[[bin]]
name = "heim"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Windowing
winit = { version = "0.30", default-features = false }
global-hotkey = { version = "0.7" }
serde = { version = "1" }
# Toml reading
toml = { version = "0.9", default-features = false, features = ["parse", "serde"] }
# Logging
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
  "env-filter",
] }

